@@ -2,6 +2,7 @@
 - rename some confusing names
 - get mondemand_statdb:config() to print out parts of md_config table
 - make sure gcounters are read from the appropriate table
+- Initialize gcounter rate to 0
 
 * Tue Jun 04 2019 David Hull <david.hull@openx.com> 6.12.0
 - Add gcounter type, a counter which emits values like a gauge.
